Edit wording on following feed and fix overflow on posts

--- a/posts/static/posts/css/posts.css
+++ b/posts/static/posts/css/posts.css
@@ -29,12 +29,8 @@
     border-radius: 8px;
     display: flex;
     flex-direction: row;
+    overflow: hidden;
 }
-
-.post-bor:last-of-type {
-    border-bottom: .5px solid #bf9b9b;
-    border-radius: 2px;
-  }
 
 .post-container {
     border-radius: 5px;
